<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_acknowage_earch">Join Knowledge Group</string>
    <string name="about_author">Author: weishu (Contact me)</string>
    <string name="about_author_contact">Contact me</string>
    <string name="about_author_coolapk">Coolapk(weishu)</string>
    <string name="about_author_email">Email me</string>
    <string name="about_author_github">Github(tiann)</string>
    <string name="about_author_xda">XDA(weishu)</string>
    <string name="about_author_zhihu">Zhihu(weishu)</string>
    <string name="about_btn">About</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_device_id_denied">Can not get identification code, please grant the permission.</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_feedback_qq_title">QQ Group (Click to join)</string>
    <string name="about_feedback_title">TaiChi feedback</string>
    <string name="about_follow_gongzhonghao">Follow WeChat Public Account</string>
    <string name="about_get_device_id">Get Identification code</string>
    <string name="about_get_device_id_faled">Get Identification code failed.</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_magisk_guide">TaiChi for Magisk</string>
    <string name="about_page_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vehicula ligula tortor, in pellentesque dui congue ac. Vestibulum lacinia urna magna, quis cursus ante iaculis nec. Nunc ut ligula sit amet odio ultrices euismod vel vel purus. Sed lacus mauris, aliquam et placerat id</string>
    <string name="about_page_website">Official website</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_telegram_group">Telegram group</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_version_title">Version: %1$s-%2$d</string>
    <string name="about_website">Visit our website</string>
    <string name="about_wuji">About Wuji</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="activate_device_owner">"Activate the God's door"</string>
    <string name="activate_the_goddoor_success_by_icebox">Activate the God door success by IceBox!</string>
    <string name="add">Add</string>
    <string name="add_apps">Add Apps</string>
    <string name="add_disable_apps">Add to Stop APPs list</string>
    <string name="add_disable_apps_taichi">加入阴阳结界</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="add_shortcut_manual">Custom App Shortcuts</string>
    <string name="alert_for_magisk_global_mode">Only Magisk module provided by TaiChi is too low, please upgrade it to v4.9.0 at least!</string>
    <string name="app_desc">An easy way to use Xposed module.</string>
    <string name="app_desc_taichi">Unlock magic of Android devices.</string>
    <string name="app_guide_cancel">I know it</string>
    <string name="app_guide_confirm">Look it!</string>
    <string name="app_guide_content">TaiChi is not a simple APP, please refer the instructions and FAQ first!</string>
    <string name="app_guide_title">Important tips</string>
    <string name="app_installer_label">App Installer</string>
    <string name="app_manage_activity">"The God's door"</string>
    <string name="app_name">TaiChi</string>
    <string name="app_name_beta">TaiChi·Yin</string>
    <string name="app_name_magisk">TaiChi·Yang</string>
    <string name="app_name_shaoyang">TaiChi·ShaoYang</string>
    <string name="app_name_wuji">TaiChi</string>
    <string name="app_name_wuji_magisk">TaiChi·Magisk</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_disable">Auto stop</string>
    <string name="automatic_disable_app_accessibility_service">Automatic stop the app</string>
    <string name="clear_cache">Clear cache</string>
    <string name="create_app_activity">Create App</string>
    <string name="display_all_apps">Display all apps</string>
    <string name="display_all_apps_subtitle">Display all apps in home activity</string>
    <string name="display_system_apps">Display system Apps</string>
    <string name="display_system_apps_subtitle">Display system apps in home activity</string>
    <string name="donate">Donate</string>
    <string name="help_text">Help</string>
    <string name="keep_taichi_alive">Keep TaiChi alive</string>
    <string name="main_list_empty">Nothing here～</string>
    <string name="main_list_empty_tips">Click to add a new app :)</string>
    <string name="manage_module_activity">Manage Modules</string>
    <string name="manual_shortcut_subtitle">Shortcut subtitle</string>
    <string name="menu__not_show_system">"Don't show system apps"</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_deoptimize">Deoptimize</string>
    <string name="menu_action_launch">Launch it</string>
    <string name="menu_action_optimize">Optimize</string>
    <string name="menu_action_show_update_info">Show update info</string>
    <string name="menu_action_stop">Stop it</string>
    <string name="menu_action_uninstall">Uninstall</string>
    <string name="menu_action_upgrade">Upgrade App</string>
    <string name="menu_action_upgrade_engine">Upgrade kernel(%1$d->%2$d)</string>
    <string name="menu_export_scope_settings">Export scope settings</string>
    <string name="menu_import_scope_settings">Import scope settings from clipboard</string>
    <string name="menu_not_show_added">"Don't show apps which has been added"</string>
    <string name="menu_not_show_xposed_modules">"Don't show Xposed modules"</string>
    <string name="module_download">Download modules</string>
    <string name="module_manage_menu_check_update">Update compatibility engine</string>
    <string name="module_manage_menu_config_version">Compatibility engine version：%1$d</string>
    <string name="module_manage_menu_hide_update_info">Hide update tips</string>
    <string name="module_manage_menu_show_all">Show all modules</string>
    <string name="module_manage_menu_show_only_enabled">Only show enabled modules</string>
    <string name="module_manage_menu_submit_module">Module Unsupported?</string>
    <string name="module_manage_module_scope">Config scope</string>
    <string name="module_manage_what_is_module_engine">What is compatibility engine?</string>
    <string name="module_menu_action_compatible">Supported versions</string>
    <string name="module_menu_action_detail">Application Details</string>
    <string name="module_menu_action_launch">Launch</string>
    <string name="set_auto_start">Set Auto-start</string>
    <string name="settings_auto_start_summary">"TaiChi·Yin needs the Auto-start permission to run normally(TaiChi·Yang needn't)."</string>
    <string name="settings_category_advance">Advance</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_for_god_door_summary">Unlock more power of TaiChi via Device Owner! (Install and uninstall silently / Hide app)</string>
    <string name="settings_for_magisk_summary">Unlock magic power of TaiChi via Magisk! Use system-wide modules and more features!</string>
    <string name="settings_global_exclude_summary">"Apps that you don't want to load modules"</string>
    <string name="settings_global_exclude_title">Exclusion list</string>
    <string name="settings_keep_alive_summary">If TaiChi is killed by System frequently and Auto-Start cannot work, Try this to keep TaiChi alive and apps created by TaiChi run normally.</string>
    <string name="settings_key_activate_god_dor">settings_key_activate_god_dor</string>
    <string name="settings_key_auto_start">settings_key_auto_start</string>
    <string name="settings_key_clear_cache">settings_key_clear_cache</string>
    <string name="settings_key_for_magisk">settings_key_for_magisk</string>
    <string name="settings_key_global_exclude">settings_key_global_exclude</string>
    <string name="settings_key_global_mode">settings_key_global_mode</string>
    <string name="settings_key_keep_alive">settings_key_keep_alive</string>
    <string name="settings_key_module_reinstall_prompt">Prompt when module reinstalled</string>
    <string name="settings_key_module_reinstall_prompt_summary">Prompt when enabled module is reinstalled(For developer).</string>
    <string name="settings_key_no_fabric">No AppCenter Crashlytics</string>
    <string name="settings_key_nosystem">Exclude system apps</string>
    <string name="settings_key_perfer_module_page">Prefer Module Page</string>
    <string name="settings_key_perfer_module_page_summary">When enabled, show module page first when you open Taichi.</string>
    <string name="settings_key_switch_icon">Switch icon</string>
    <string name="settings_key_switch_theme">settings_key_switch_theme</string>
    <string name="settings_magisk_global_mode">Global mode</string>
    <string name="switch_theme_title">Switch theme</string>
</resources>