<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_launch" android:orderInCategory="100" android:title="@string/module_menu_action_launch" app:showAsAction="ifRoom" />
    <item android:id="@id/action_detail" android:orderInCategory="100" android:title="@string/module_menu_action_detail" app:showAsAction="ifRoom" />
    <item android:id="@id/action_compatible" android:orderInCategory="100" android:title="@string/module_menu_action_compatible" app:showAsAction="ifRoom" />
    <item android:id="@id/action_uninstall" android:orderInCategory="100" android:title="@string/menu_action_uninstall" app:showAsAction="ifRoom" />
    <item android:id="@id/action_show_update_info" android:orderInCategory="100" android:title="@string/menu_action_show_update_info" app:showAsAction="ifRoom" />
    <item android:id="@id/module_manage_menu_module_scope" android:orderInCategory="100" android:title="@string/module_manage_module_scope" app:showAsAction="ifRoom" />
    <item android:id="@id/module_manage_menu_submit_module" android:orderInCategory="100" android:title="@string/module_manage_menu_submit_module" app:showAsAction="ifRoom" />
</menu>