<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/main_top" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include layout="@layout/main_header_layout" />
        <com.yanzhenjie.recyclerview.SwipeRecyclerView android:id="@id/listView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/emptyView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/main_list_empty_tips">
            <ImageView android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_box" />
            <TextView android:id="@id/main_list_empty_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_list_empty" />
            <TextView android:id="@id/main_list_empty_tip2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_list_empty_tips" />
        </LinearLayout>
    </LinearLayout>
    <com.github.clans.fab.FloatingActionMenu android:layout_gravity="bottom|center|right" android:id="@id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_alignParentBottom="true" android:layout_marginEnd="30.0dip" android:layout_alignParentEnd="true" app:menu_colorNormal="@color/colorPrimary" app:menu_colorPressed="@color/colorPrimaryDark" app:menu_colorRipple="@color/colorPrimaryOpacity" app:menu_fab_show_animation="@anim/fab_slide_in_from_left" app:menu_icon="@drawable/ic_expand">
        <com.github.clans.fab.FloatingActionButton android:id="@id/create_app_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add" android:contentDescription="@string/create_app_activity" app:fab_colorNormal="@color/colorPrimary" app:fab_colorPressed="@color/colorPrimaryDark" app:fab_colorRipple="@color/colorPrimaryOpacity" app:fab_label="@string/create_app_activity" app:fab_size="mini" />
        <com.github.clans.fab.FloatingActionButton android:id="@id/app_manage_btn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_door" android:contentDescription="@string/manage_module_activity" app:fab_colorNormal="@color/colorPrimary" app:fab_colorPressed="@color/colorPrimaryDark" app:fab_colorRipple="@color/colorPrimaryOpacity" app:fab_label="@string/app_manage_activity" app:fab_size="mini" />
        <com.github.clans.fab.FloatingActionButton android:id="@id/module_manage_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_module" android:contentDescription="@string/manage_module_activity" app:fab_colorNormal="@color/colorPrimary" app:fab_colorPressed="@color/colorPrimaryDark" app:fab_colorRipple="@color/colorPrimaryOpacity" app:fab_label="@string/manage_module_activity" app:fab_size="mini" />
        <com.github.clans.fab.FloatingActionButton android:id="@id/module_download_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_download" android:contentDescription="@string/module_download" app:fab_colorNormal="@color/colorPrimary" app:fab_colorPressed="@color/colorPrimaryDark" app:fab_colorRipple="@color/colorPrimaryOpacity" app:fab_label="@string/module_download" app:fab_size="mini" />
        <com.github.clans.fab.FloatingActionButton android:id="@id/faq_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_about" android:contentDescription="@string/about_btn" app:fab_colorNormal="@color/colorPrimary" app:fab_colorPressed="@color/colorPrimaryDark" app:fab_colorRipple="@color/colorPrimaryOpacity" app:fab_label="@string/help_text" app:fab_size="mini" />
        <com.github.clans.fab.FloatingActionButton android:id="@id/donate_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_donate" android:contentDescription="@string/donate" app:fab_colorNormal="@color/colorPrimary" app:fab_colorPressed="@color/colorPrimaryDark" app:fab_colorRipple="@color/colorPrimaryOpacity" app:fab_label="@string/donate" app:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>
    <ProgressBar android:id="@id/progress_bar" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
</RelativeLayout>