<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/coordinatorLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/app_bar_main" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@drawable/layout_divider" android:showDividers="middle" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout android:id="@id/ll_display_system_apps" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
            <TextView android:textSize="16.0sp" android:textColor="@color/textPrimary" android:id="@id/tv_display_system_apps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/display_system_apps" />
            <TextView android:textSize="14.0sp" android:textColor="@color/textSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/display_system_apps_subtitle" android:layout_toLeftOf="@id/switch_display_system_apps" android:layout_below="@id/tv_display_system_apps" android:layout_alignParentStart="true" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/switch_display_system_apps" android:background="@null" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/ll_display_all_apps" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
            <TextView android:textSize="16.0sp" android:textColor="@color/textPrimary" android:id="@id/tv_display_all_apps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/display_all_apps" />
            <TextView android:textSize="14.0sp" android:textColor="@color/textSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/display_all_apps_subtitle" android:layout_toLeftOf="@id/switch_display_all_apps" android:layout_below="@id/tv_display_all_apps" android:layout_alignParentStart="true" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/switch_display_all_apps" android:background="@null" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/ll_auto_disable" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
            <TextView android:textSize="16.0sp" android:textColor="@color/textPrimary" android:id="@id/tv_auto_disable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_disable" />
            <TextView android:textSize="14.0sp" android:textColor="@color/textSecondary" android:id="@id/tv_auto_disable_sub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/automatic_disable_app_accessibility_service" android:layout_toLeftOf="@id/switch_auto_disable" android:layout_below="@id/tv_auto_disable" android:layout_alignParentStart="true" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/switch_auto_disable" android:background="@null" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/ll_add_shortcut_manual" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClick">
            <TextView android:textSize="16.0sp" android:textColor="@color/textPrimary" android:id="@id/tv_manual_shortcut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_shortcut_manual" />
            <TextView android:textSize="14.0sp" android:textColor="@color/textSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/manual_shortcut_subtitle" android:layout_toLeftOf="@id/switch_manual_shortcut" android:layout_below="@id/tv_manual_shortcut" android:layout_alignParentStart="true" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/switch_manual_shortcut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="16.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>